--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 	</main>
 
 	<!-- 영화 카드 UI -->
-	<div class="movie-cards-container">
-	</div>
+	<ul class="movie-cards-container">
+	</ul>
 
 	<!-- 모달창 -->
-	<div class="modal-container">
+	<article class="modal-container">
 		<div class="modal-box">
 			<span class="modal-close">&times;</span>
 			<div class="modal">
@@ -64,10 +64,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</article>
 
 	<script src="./main.js"></script>
-	<script src="./modal.js"></script>
 </body>
 
 </html>
